<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:calendar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <RelativeLayout
                    android:id="@+id/rl_iv_back_btn_bg"
                    android:layout_width="50dp"
                    android:layout_height="100dp" />

                <ImageView
                    android:id="@+id/iv_back_btn"
                    android:layout_width="25dp"
                    android:layout_height="16dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/aricalendar_btn_back" />

                <RelativeLayout
                    android:id="@+id/rl_reset_btn"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp">
                    <TextView
                        android:id="@+id/book_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/unfolding"
                        android:textColor="@color/colorTest"
                        android:textSize="17sp" />
                    <TextView
                        android:id="@+id/tv_reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/resetting"
                        android:textColor="@color/colorTest"
                        android:textSize="17sp" />
                    <TextView
                        android:id="@+id/rl_done_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ok"
                        android:textColor="@color/colorTest"
                        android:textSize="17sp" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cover1"
                        android:layout_weight="3"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:weightSum="3"
                        >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:weightSum="2">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/book_name"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:hint="@string/book_name"
                            android:textColor="@color/colorMonthTextColor"
                            android:textColorHint="@color/colorWeekEndColor"
                            android:layout_marginLeft="@dimen/text_size_day"
                            android:layout_weight="1"
                            android:textSize="@dimen/text_size_day"
                            />
                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/book_author"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorMonthTextColor"
                            android:textColorHint="@color/colorTest"
                            android:hint="@string/book_author"
                            android:layout_marginLeft="@dimen/text_size_day"
                            android:layout_weight="1"
                            android:textSize="@dimen/text_size_day"
                            />
                    </LinearLayout>

                        <LinearLayout
                            android:id="@+id/rl_select_date"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="2">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/text_size_day"
                                android:text="@string/reading_day"
                                android:textColor="@color/colorWeekEndColor"
                                android:textSize="@dimen/text_size_day" />

                            <TextView
                                android:id="@+id/tv_start_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/text_size_day"
                                android:text=""
                                android:textColor="@color/colorWeekEndColor"
                                android:textSize="@dimen/text_size_day" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/text_size_day"
                                android:text="~"
                                android:textColor="@color/colorWeekEndColor"
                                android:textSize="@dimen/text_size_day" />

                            <TextView
                                android:id="@+id/tv_end_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/text_size_day"
                                android:text=""
                                android:textColor="@color/colorWeekEndColor"
                                android:textSize="@dimen/text_size_day" />

                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:hint="@string/about_this_book"
                    android:textColor="@color/colorMonthTextColor"
                    android:textColorHint="@color/colorTest"
                    android:textSize="@dimen/text_size_day"
                    />
        </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="11dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="7">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/sunday"
                            android:textColor="#414141"
                            android:textSize="11sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/monday"
                            android:textColor="#414141"
                            android:textSize="11sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/tuesday"
                            android:textColor="#414141"
                            android:textSize="11sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/wednesday"
                            android:textColor="#414141"
                            android:textSize="11sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/thursday"
                            android:textColor="#414141"
                            android:textSize="11sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/friday"
                            android:textColor="#414141"
                            android:textSize="11sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/saturday"
                            android:textColor="#414141"
                            android:textSize="11sp" />
                    </RelativeLayout>


                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#d8d8d8" />
            </RelativeLayout>
        </LinearLayout>



        <co.soori.aircalendar.core.DayPickerView
            android:id="@+id/pickerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            calendar:drawRoundRect="true" />
    </LinearLayout>




    <RelativeLayout
        android:id="@+id/rl_checkout_select_info_popup"
        android:background="#bf000000"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="308dp"
            android:layout_height="160dp"
            android:background="#ffffff">

            <TextView
                android:id="@+id/tv_popup_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/tv_popup_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_popup_title"
                android:gravity="center"
                android:textSize="13sp"
                android:textColor="#4a4a4a"
                android:layout_marginTop="13dp"
                android:text="@string/select_day"/>


            <RelativeLayout
                android:id="@+id/rl_popup_select_checkout_info_ok"
                android:layout_width="220dp"
                android:layout_height="42dp"
                android:layout_marginBottom="14dp"
                android:gravity="center"
                android:background="@drawable/aircalendar_btn_style"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:text="@string/ok"
                    android:textSize="15sp"/>

            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>
